--- a/spending-dashboard.html
+++ b/spending-dashboard.html
@@ -415,7 +415,7 @@
         async function fetchFinancialData() {
             try {
                 // Replace with your actual Lambda function URL
-                const response = await fetch('https://gc5m4zluhi76nk57wplccvrahy0kypam.lambda-url.us-east-1.on.aws/');
+                const response = await fetch('https://yx2yrnag5b7arjvud7zljvpzya0uikon.lambda-url.ap-southeast-1.on.aws/');
                 if (!response.ok) {
                     throw new Error('Failed to fetch data');
                 }
